ResultSection: Fix height on mobile

--- a/src/components/ResultSection/ResultSection.module.css
+++ b/src/components/ResultSection/ResultSection.module.css
@@ -26,6 +26,9 @@
 }
 
 @media (max-width: 600px) {
+  .results {
+    height: 35vh;
+  }
   .resultSection {
     margin-top: 1.5rem;
   }
